--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ apibara = "apibara.cli:cli"
 python = "^3.9"
 grpcio = "^1.47.0"
 grpcio-tools = "^1.47.0"
-eth-hash = "^0.3.2"
+eth-hash = {extras = ["pysha3"], version = "^0.3.2"}
 aiochannel = "^1.1.1"
 click = "^8.1.3"
 click-help-colors = "^0.9.1"
