--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ eth-hash = {extras = ["pysha3"], version = "^0.3.2"}
 aiochannel = "^1.1.1"
 click = "^8.1.3"
 click-help-colors = "^0.9.1"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
