--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aiochannel = "^1.1.1"
 click = "^8.1.3"
 click-help-colors = "^0.9.1"
 aiohttp = "^3.8.1"
+backoff = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
