--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Francesco Ceccon <francesco@apibara.com>"]
 apibara = "apibara.cli:cli"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.7.2,<3.10"
 grpcio = "^1.47.0"
 grpcio-tools = "^1.47.0"
 eth-hash = {extras = ["pysha3"], version = "^0.3.2"}
@@ -17,11 +17,14 @@ click = "^8.1.3"
 click-help-colors = "^0.9.1"
 aiohttp = "^3.8.1"
 backoff = "^2.1.2"
+pymongo = {extras = ["srv"], version = "^4.1.1"}
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1"
 black = "^22.3.0"
 isort = "^5.10.1"
+"starknet.py" = "^0.3.4-alpha.0"
+pytest-asyncio = "^0.18.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
