--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ black = "^22.3.0"
 isort = "^5.10.1"
 "starknet.py" = "^0.3.4-alpha.0"
 pytest-asyncio = "^0.18.3"
+web3 = "^5.30.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
