fix: starknet example

--- a/examples/starknet/configuration.toml
+++ b/examples/starknet/configuration.toml
@@ -1,2 +1,5 @@
 [admin.storage]
 connection_string = "mongodb://apibara:apibara@mongo:27017"
+[network.starknet-goerli]
+type = "starknet"
+provider_url = "https://starknet-goerli.apibara.com/"
