--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "apibara"
-version = "0.4.3"
+version = "0.5.0"
 description = "Apibara cliend SDK. Build web3-powered applications."
 authors = ["Francesco Ceccon <francesco@apibara.com>"]
 license = "Apache-2.0"
@@ -35,6 +35,7 @@ click-help-colors = "^0.9.1"
 aiohttp = "^3.8.1"
 backoff = "^2.1.2"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
+grpc-requests = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
@@ -45,5 +46,5 @@ pytest-asyncio = "^0.18.3"
 web3 = "^5.30.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.8"]
 build-backend = "poetry.core.masonry.api"
