--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "apibara"
-version = "0.5.3"
+version = "0.5.4"
 description = "Apibara cliend SDK. Build web3-powered applications."
 authors = ["Francesco Ceccon <francesco@apibara.com>"]
 license = "Apache-2.0"
@@ -25,7 +25,7 @@ classifiers = [
 apibara = "apibara.cli:cli"
 
 [tool.poetry.dependencies]
-python = ">=3.7.2,<3.10"
+python = ">=3.8,<3.10"
 grpcio = "^1.47.0"
 grpcio-tools = "^1.47.0"
 eth-hash = {extras = ["pysha3"], version = "^0.3.2"}
@@ -36,7 +36,7 @@ aiohttp = "^3.8.1"
 backoff = "^2.1.2"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
 grpc-requests = "^0.1.3"
-"starknet.py" = "^0.4.4a0"
+starknet-py = "0.6.1a0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
