--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "apibara"
-version = "0.5.16"
-description = "Apibara cliend SDK. Build web3-powered applications."
+version = "0.6.0"
+description = "Apibara cliend SDK. Stream and transform on-chain data with Python."
 authors = ["Francesco Ceccon <francesco@apibara.com>"]
 license = "Apache-2.0"
 readme = "README.rst"
@@ -16,35 +16,22 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9"
 ]
 
-[tool.poetry.scripts]
-apibara = "apibara.cli:cli"
-
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
-grpcio = "^1.47.0"
-grpcio-tools = "^1.47.0"
-eth-hash = {extras = ["pysha3"], version = "^0.3.2"}
-aiochannel = "^1.1.1"
-click = "^8.1.3"
-click-help-colors = "^0.9.1"
-aiohttp = "^3.8.1"
-backoff = "^2.1.2"
-pymongo = {extras = ["srv"], version = "^4.1.1"}
-grpc-requests = "^0.1.3"
-starknet-py = "0.6.1a0"
+grpcio = ">=1.50,<2.0"
+protobuf = ">=4.20,<5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1"
-black = "^22.3.0"
-isort = "^5.10.1"
-pytest-asyncio = "^0.18.3"
-web3 = "^5.30.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+black = "^22.12.0"
+isort = "^5.11.4"
 
 [build-system]
-requires = ["poetry-core>=1.0.8"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
