--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,13 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = ">=3.8,<3.11"
 grpcio = ">=1.50,<2.0"
 protobuf = ">=4.20,<5"
+pymongo = "^4.3.3"
+
+[tool.poetry.extras]
+indexer = ["pymongo"]
 
 [tool.poetry.dev-dependencies]
 
@@ -31,6 +35,7 @@ protobuf = ">=4.20,<5"
 pytest = "^7.2.0"
 black = "^22.12.0"
 isort = "^5.11.4"
+pytest-asyncio = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
