--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,14 @@ pytest = "^7.2.0"
 black = "^22.12.0"
 isort = "^5.11.4"
 pytest-asyncio = "^0.20.3"
+testcontainers = {extras = ["mongodb"], version = "^3.7.1"}
+
+[tool.black]
+line-length = 88
+target-version = ['py38', 'py39', 'py310']
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
