--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest = "^7.2.0"
 black = "^22.12.0"
 isort = "^5.11.4"
 pytest-asyncio = "^0.20.3"
+grpcio-tools = ">=1.50,<2.0"
 testcontainers = {extras = ["mongodb"], version = "^3.7.1"}
 
 [tool.black]
